@@ -23,13 +23,9 @@
  */
 package com.github.actionfx.appfactory.fxparser;
 
-import static org.hamcrest.CoreMatchers.equalTo;
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.contains;
-import static org.hamcrest.Matchers.nullValue;
+import static org.assertj.core.api.Assertions.assertThat;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Test;
 
@@ -57,10 +53,10 @@ class FxmlElementTest {
 
 		// WHEN
 		final List<String> names = root.getFxmlElementsAsStream().map(FxmlElement::getName)
-				.collect(Collectors.toList());
+                .toList();
 
 		// THEN
-		assertThat(names, contains("root", "child1", "child2", "child3"));
+		assertThat(names).containsExactly("root", "child1", "child2", "child3");
 	}
 
 	@Test
@@ -72,7 +68,7 @@ class FxmlElementTest {
 		final Class<?> borderPaneClass = element.asResolvedClass();
 
 		// THEN
-		assertThat(borderPaneClass, equalTo(BorderPane.class));
+		assertThat(borderPaneClass).isEqualTo(BorderPane.class);
 	}
 
 	@Test
@@ -81,6 +77,6 @@ class FxmlElementTest {
 		final FxmlElement element = new FxmlElement(null, "BorderPane", null);
 
 		// WHEN and THEN
-		assertThat(element.asResolvedClass(), nullValue());
+		assertThat(element.asResolvedClass()).isNull();
 	}
 }
