@@ -29,8 +29,6 @@ import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.lang.reflect.Parameter;
-import java.security.AccessController;
-import java.security.PrivilegedAction;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -41,7 +39,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.ClassUtils;
 
@@ -51,7 +48,7 @@ import org.apache.commons.lang3.ClassUtils;
  * @author koster
  *
  */
-public class ReflectionUtils {
+public final class ReflectionUtils {
 
     private static final MethodFilter PUBLIC_METHOD_WITH_RESULT_PREDICATE = publicMethodWithReturnTypePredicate();
 
@@ -168,17 +165,15 @@ public class ReflectionUtils {
      * @return the field value
      */
     public static Object getFieldValue(final Field field, final Object instance) {
-        return AccessController.doPrivileged((PrivilegedAction<?>) () -> {
-            final boolean wasAccessible = field.canAccess(instance);
-            try {
-                field.setAccessible(true); // NOSONAR
-                return field.get(instance);
-            } catch (IllegalArgumentException | IllegalAccessException ex) {
-                throw new IllegalStateException("Cannot get value from field: " + field, ex);
-            } finally {
-                field.setAccessible(wasAccessible);
-            }
-        });
+        final boolean wasAccessible = field.canAccess(instance);
+        try {
+            field.setAccessible(true); // NOSONAR
+            return field.get(instance);
+        } catch (IllegalArgumentException | IllegalAccessException ex) {
+            throw new IllegalStateException("Cannot get value from field: " + field, ex);
+        } finally {
+            field.setAccessible(wasAccessible);
+        }
     }
 
     /**
@@ -193,6 +188,9 @@ public class ReflectionUtils {
      */
     public static Object getFieldValueByGetter(final Field field, final Object instance) {
         final Method method = findMethod(instance.getClass(), getterMethodName(field));
+        if (method == null) {
+            throw new IllegalStateException("Getter method not found for field '" + field.getName() + "' in class '" + field.getDeclaringClass().getCanonicalName() + "'");
+        }
         return invokeMethod(method, instance);
     }
 
@@ -211,6 +209,9 @@ public class ReflectionUtils {
      */
     public static Object getFieldValueByPropertyGetter(final Field field, final Object instance) {
         final Method method = findMethod(instance.getClass(), propertyGetterMethodName(field));
+        if (method == null) {
+            throw new IllegalStateException("Property-Getter method not found for field '" + field.getName() + "' in class '" + field.getDeclaringClass().getCanonicalName() + "'");
+        }
         return invokeMethod(method, instance);
     }
 
@@ -241,7 +242,7 @@ public class ReflectionUtils {
     }
 
     /**
-     * Constructs the {@code property-getter}-method name for the supplied {@link field}.
+     * Constructs the {@code property-getter}-method name for the supplied {@code field}.
      * <p>
      * The name of the property-getter for a field with name "field" is derived as {@code fieldProperty}.
      *
@@ -264,18 +265,15 @@ public class ReflectionUtils {
      *            the value to set as field value
      */
     public static void setFieldValue(final Field field, final Object instance, final Object value) {
-        AccessController.doPrivileged((PrivilegedAction<?>) () -> {
-            final boolean wasAccessible = field.canAccess(instance);
-            try {
-                field.setAccessible(true); // NOSONAR
-                field.set(instance, value); // NOSONAR
-                return null; // return nothing...
-            } catch (IllegalArgumentException | IllegalAccessException ex) {
-                throw new IllegalStateException("Cannot set field: " + field + " with value " + value, ex);
-            } finally {
-                field.setAccessible(wasAccessible);
-            }
-        });
+        final boolean wasAccessible = field.canAccess(instance);
+        try {
+            field.setAccessible(true); // NOSONAR
+            field.set(instance, value); // NOSONAR
+        } catch (IllegalArgumentException | IllegalAccessException ex) {
+            throw new IllegalStateException("Cannot set field: " + field + " with value " + value, ex);
+        } finally {
+            field.setAccessible(wasAccessible);
+        }
     }
 
     /**
@@ -290,6 +288,9 @@ public class ReflectionUtils {
      */
     public static void setFieldValueBySetter(final Field field, final Object instance, final Object value) {
         final Method method = findMethod(instance.getClass(), setterMethodName(field));
+        if (method == null) {
+            throw new IllegalStateException("Setter method not found for field '" + field.getName() + "' in class '" + field.getDeclaringClass().getCanonicalName() + "'");
+        }
         invokeMethod(method, instance, value);
     }
 
@@ -414,21 +415,19 @@ public class ReflectionUtils {
      */
     @SuppressWarnings("unchecked")
     public static <T> T invokeMethod(final Method method, final Object instance, final Object... arguments) {
-        return AccessController.doPrivileged((PrivilegedAction<T>) () -> {
-            final boolean wasAccessible = method.canAccess(instance);
-            try {
-                method.setAccessible(true); // NOSONAR
-                if (arguments.length == 0) {
-                    return (T) method.invoke(instance);
-                } else {
-                    return (T) method.invoke(instance, arguments);
-                }
-            } catch (IllegalAccessException | IllegalArgumentException | InvocationTargetException ex) {
-                throw new IllegalStateException("Problem invoking method '" + method.getName() + "'!", ex);
-            } finally {
-                method.setAccessible(wasAccessible);
+        final boolean wasAccessible = method.canAccess(instance);
+        try {
+            method.setAccessible(true); // NOSONAR
+            if (arguments.length == 0) {
+                return (T) method.invoke(instance);
+            } else {
+                return (T) method.invoke(instance, arguments);
             }
-        });
+        } catch (IllegalAccessException | IllegalArgumentException | InvocationTargetException ex) {
+            throw new IllegalStateException("Problem invoking method '" + method.getName() + "'!", ex);
+        } finally {
+            method.setAccessible(wasAccessible);
+        }
     }
 
     /**
@@ -663,7 +662,7 @@ public class ReflectionUtils {
             // only add methods from super classes, if these are not contained in method
             // list yet (overriden methods are filtered out)
             methodList.addAll(findMethodsByFilter(clazz.getSuperclass(), methodFilter, visited).stream()
-                    .filter(m -> !containsMethodWithSameNameAndSignature(methodList, m)).collect(Collectors.toList()));
+                    .filter(m -> !containsMethodWithSameNameAndSignature(methodList, m)).toList());
         }
         return methodList;
     }
